--- a/index.html
+++ b/index.html
@@ -121,15 +121,14 @@
             <h1><span class="font-bold">"</span>
                 Dear Meewho<span class="font-bold">"</span>
             </h1>
-            <p style="color: black; ">I prayas Singh wnadwjan ak wh iu N IUhw iUh IUWH iu hUW Lorem ipsum dolor sit amet
-                consectetur, adipisicing elit. Labore est ratione dolor vitae adipisci hic similique numquam magni!
-                Atque,
-                modi odit. Magni, ipsam! Omnis laudantium delectus veniam quibusdam. Numquam veniam facilis delectus
-                cumque
-                reprehenderit ea accusamus neque? Fugit itaque deserunt nam, molestias placeat repellat hic a tenetur
-                tempora corrupti. Minima excepturi distinctio aperiam fugit dolorum eaque aut obcaecati fuga sit esse
-                voluptatum maxime, pariatur harum! Asperiores totam aperiam nesciunt facilis beatae quas quisquam magni
-                quia, voluptates nam cumque itaque iste eligendi culpa? Dolores totam quam perspiciatis. Fuga.</p>
+            <p style="color: black; ">I prayas Singh/ your pradzzy badmash
+                Wanted to tell you that ki i got sax sux from starting talking to you i thought you are just a lazy kutti but you were a W and will be a W for me what anyone says nothing matters then i did batamizi with you and done raids gaali galoz and study which everyone witnessed like gojo , spryzen, and i got trolled by memes 🥺 and we did more moj masti 😝 together other than it  and i saw my good moj masti friend in you but it was not only good or best friend it was your vibe which was too good so i thought that you are a W and my good homie so why cant you be my pookiebear 👼 so after so many thinking and recollecting past experiences I started falling for you for your cooking skills 😋 for your  sax sux cringe humour (accha humour h i love it) and one day hanma exploded in your dm and you asked a my gand got fatted 
+                But rest is history
+                And yeah yeah sure sure 😃
+                Its not like ki I don't care,or I don't wanna be a part of your irl n all ,but its like ki i am not that kind of a guy who express everything
+                But i do boht zada i love you and will you be my pookiebear on this sax sux day again 😋😃💐
+                (Sorry agr cringe krdia hoto mera mann krgya tha kuch kru for you cause muje lga i am useless so i got here aur sher/mard apni pasandida aurat/sherni k liye itna to krskta h )
+                Aur sher apni sherni ko aj bhi phele jesa pyar krta h 😃😝 hope you don't find this cringe agr lge to mera moot peelio 😋</p>
         </div>
     </div>
     <!-- Service Start -->
