--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </div> -->
     <!-- Carousel End -->
     <div style="display: flex; width: 80%; justify-content: center; margin: auto;">
-
+        <img src="./" alt="">
         <div class=""
             style="padding: 40px; background-color: palevioletred; margin: 10px auto; width: 60%; border-radius: 4px; box-shadow: 3px;">
             <h1><span class="font-bold">"</span>
